# ginger

./: Cargo.toml  Dockerfile  README.md
.github/: pull_request_template.md
.github/workflows/: 01_rust_ci.yml  02_rust_publish_images.yml  03_spice_grinder_ci.yml  README.md  docker-publish.yml  publish_rust_docker_images.yml  rust.yml  rust_build_scan-image.yml  rust_ci.yml  rust_container_publishing.yml  rust_publish_docker_images.yml  rust_publish_images.yml  spice_grinder_ci.yml  zizmor-action.yml
sample_data/: sample.jwt
sample_data/bt/: 0e3d6ba6b3d0f627.grd  2025_03_13_14_55_34_4008497dc0dcd3a0.grc  21eaa91528e19d4b.gri  purls.txt
sample_data/de/: events_2025_02_25_12_02.json
src/: main.rs
