[package]
name = "sluice"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = {version = "1.0.86", features = ["backtrace"]}

im = { version = "15.1.0", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.117"

# Logging
log = "0.4.21"
thousands = "0.2.0"
env_logger = "0.11.3"

# http
reqwest = { version = "0.12.5", features = [
    # "rustls-tls",
    "blocking",
    "gzip",
    "json",
] }
urlencoding = "2.1.3"

# Crypto

base64 = "0.22.1"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"

# Zip
zip = {version="2.1.4", features=["deflate"]}
pipe = "0.4.0"
tar = "0.4.41"
