[package]
name = "ginger"
version = "0.2.1"
edition = "2021"

[dependencies]

anyhow = {version = "1.0", features = ["backtrace"]}

im = { version = "15.1.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
thousands = "0.2.0"
env_logger = "0.11"

# http
reqwest = { version = "0.12.5", features = [
    # "rustls-tls",
    "blocking",
    "gzip",
    "json",
] }
urlencoding = "2.1.3"

# Crypto

base64 = "0.22.1"
openssl = { version = "0.10", features = ["vendored"] } # For streaming AES
rsa = "0.9" # Gets us OAEP 
sha2 = "0.10.8"
rand = "=0.8.5"

# Zip
zip = {version="2.2", features=["deflate"]}
pipe = "0.4.0"
tar = "0.4"

chrono = "0.4"
